# Gejm

./: CMakeLists.txt  README.md  TODO  config.ini  main.cpp  scores_table.ini
include/: Config.h  Engine.h  Structures.h  Tile.h  Timer.h
lib/: Config.cpp  Engine.cpp  Tile.cpp  Timer.cpp
